2003-09-11  Albert Chu  <chu11@llnl.gov>

	Modified build files

	* configure.ac: Added output of gendersllnl.spec.

	* gendersllnl.spec: Removed file.

	* gendersllnl.spec.in: New file, which replaces gendersllnl.spec.

	* Removed all Makefile.in files and config files that will be
	generated by bootstrap from the repository.
	
2003-08-18  Albert Chu  <chu11@llnl.gov>

	* man/: Replaced "Release 1.0" with "August 2003" in all manpages.

2003-08-15  Albert Chu  <chu11@llnl.gov>

	* src/Gendersllnl/Gendersllnl.pm: Explicitly import the only
	required symbols from the Genders module.
	
2003-08-14  Albert Chu  <chu11@llnl.gov>

	* src/Gendersllnl/Gendersllnl.pm (get_cluster); Added optional
	$node option so that you do not have to be on a node in the
	genders database.

	* Tagged gendersllnl-1-2-1

2003-08-13  Albert Chu  <chu11@llnl.gov>

	* compat/Hostlist.pm: Added ability to export symbols.

	* compat/Hostlist.pm: Added perldoc manpage.

	* src/Libgendersllnl/MANIFEST: Removed pointless files from file list.

	* src/Libgendersllnl/README: Removed file.

2003-08-07  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec: Lowered pdsh version requirement

	* Tagged gendersllnl-1-1-2

2003-08-04  Albert Chu  <chu11@llnl.gov>

	* src/Gendersllnl/Gendersllnl.pm: Added get_cluster() to perldoc.

	* dist/dist_all: Reworked to avoid using -r option with nodeattr.

	* dist/dist_all: Changed -r option to -i option, so that it
	coincides with -i option in dist2.
	
	* man/dist/dist_all.1: 
	Removed SP specific references.
	Changed -r option to -i option and re-worded manpage appropriately.

	* man/dist/dist_cmp.1:
	Fixed "dsh" to "pdsh", which is what is used on Linux systems. 
	
	* gendersllnl.spec: Added requirement of pdsh >= 2.0 for dist subpackage.

	* Tagged gendersllnl-1-1-1
	
2003-07-15  Albert Chu  <chu11@llnl.gov>

	* dist/inst.c: Fixed gnats/214 bug. 

	* Tagged gendersllnl-1-0-1.
	
2003-05-15  Albert Chu  <chu11@llnl.gov>

	* Initial Entry.
