@@ -2,11 +2,15 @@
 
 	Modified build files
 
-	* configure.ac: Added output of gendersllnl.spec.
+	* configure.ac: 
+	Added output of gendersllnl.spec.
+	Added call to AC_META.
 
 	* gendersllnl.spec: Removed file.
 
 	* gendersllnl.spec.in: New file, which replaces gendersllnl.spec.
+
+	* config/ac_meta.m4: New file.
 
 	* Removed all Makefile.in files and config files that will be
 	generated by bootstrap from the repository.
